tests/out/error/index/invalid_index.out
tests/out/error/index/invalid_index.in.bt:3:8 error: non-integer index `bool`
tests/out/error/index/invalid_index.in.bt:4:8 error: non-integer index `f64`
tests/out/error/index/invalid_index.in.bt:5:8 error: non-integer index `string`
tests/out/error/index/invalid_index.in.bt:6:9 error: undefined ident `badvar`
tests/out/error/index/invalid_index.in.bt:10:6 error: non-integer index `[]i32`
tests/out/error/index/invalid_index.in.bt:11:6 error: non-integer index `u8`
tests/out/error/index/invalid_index.in.bt:12:7 error: undefined ident `badvar`
tests/out/error/index/invalid_index.in.bt:18:10 error: invalid map index `i32`, expected `string`
tests/out/error/index/invalid_index.in.bt:20:11 error: undefined ident `badvar`
